Починить костыль с прокруткой профиля для Firefox

--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -7,10 +7,11 @@
 
 {% block content %}
 
-    <div class="container-fluid no-margin-padding">
+    {# TODO: Убрать это дерьмо #}
+    <input style="opacity: 0.0; position: fixed; left: -999px; top: -999px; max-width: 0; max-height: 0"
+           value="" title="" readonly="" autofocus="" type="text">
 
-        {% comment %} TODO убрать это дерьмо {% endcomment %}
-        <input style="visibility: hidden; position: absolute" autofocus>
+    <div class="container-fluid no-margin-padding">
 
         <div class="post-panel panel-settings">
 
