Предпочитать слово «записи» вместо «постов»

--- a/cloud/templates/cloud/post_list.html
+++ b/cloud/templates/cloud/post_list.html
@@ -47,7 +47,7 @@
             {% else %}
                 <div class="no-posts">
                     <p>
-                        Здесь будут появляться посты, актуальные для вашего направления.
+                        Здесь будут появляться записи, актуальные для вашего направления.
                     </p>
                     <p>
                         Вы можете внести свой вклад и <a href="{% url 'post_new' %}">запостить что-нибудь</a>.
