--- a/cloud/templates/settings.html
+++ b/cloud/templates/settings.html
@@ -98,7 +98,7 @@
                     <div class="btn btn-primary full-width" style="margin-bottom: 10px">Все проверенные публикации</div>
                 </a>
                 <a href="{% url 'user_not_checked_posts' user_id=user.pk %}">
-                    <div class="btn btn-warning full-width">Посты на модерации</div>
+                    <div class="btn btn-warning full-width">Записи на&nbsp;модерации</div>
                 </a>
             </div>
 
