--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -87,7 +87,7 @@
             document
                 .querySelector('#post-{{ post.pk }} .post-footer-button-delete')
                 .addEventListener('click', (e) => {
-                    if (!confirm("Удалить запись? После этого действия пост будет невозможно восстановить.")) {
+                    if (!confirm("Удалить запись? После этого действия запись будет невозможно восстановить.")) {
                         e.preventDefault();
                     }
                 });
