--- a/cloud/templates/moderation.html
+++ b/cloud/templates/moderation.html
@@ -15,7 +15,7 @@
 
     <div class="moderation-container">
         <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="tab" href="#posts">Посты</a></li>
+            <li class="active"><a data-toggle="tab" href="#posts">Записи</a></li>
             <li><a data-toggle="tab" href="#structures">Подразделения</a></li>
         </ul>
 
