Сохранять информацию об изначальном авторе поста

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -55,7 +55,7 @@
         <hr/>
         <footer>
             <a class="post-author"
-               title="Последний редактор записи"
+               title="Автор записи"
                href="/user/{{ post.author.pk }}">{{ post.author }}</a>
             <span class="post-created-date" title="Дата и время создания записи">
                 ({{ post.created_date }})
