Возвращать JSON с пагинацией в API поиска

--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -77,7 +77,7 @@
 
             {% if request.GET.subject_id %}
                 subject_id = {{ request.GET.subject_id }};
-                search(subject_id);
+                setSubject(subject_id)
             {% endif %}
 
             {% if request.GET.type_id %}
