--- a/cloud/templates/contacts.html
+++ b/cloud/templates/contacts.html
@@ -1,7 +1,7 @@
 {% extends 'main_template.html' %}
 
 {% block title %}
-    Cloud Обратная связь
+    Обратная связь
 {% endblock %}
 
 {% block content %}
