--- a/cloud/templates/cloud/structure.html
+++ b/cloud/templates/cloud/structure.html
@@ -1,6 +1,26 @@
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
     <div class="post-panel">
 
+        {% if structure.logo %}
+            {% if user == post.author or user.userinfo.status.can_moderate or user.is_staff or user.is_superuser %}
+                <hr/>
+                <nav class="post-moderation btn-group">
+                    <a href="{% url 'university_approve' university_id=structure.pk %}"
+                       class="btn btn-success">
+                        <span class="showopacity glyphicon glyphicon-ok"></span>
+                        Одобрить
+                    </a>
+                    <a href="{% url 'university_delete' university_id=structure.pk %}"
+                       class="btn btn-danger"
+                       title="Удалить"
+                       aria-label="Удалить">
+                        <span class="showopacity glyphicon glyphicon-trash"></span>
+                    </a>
+                </nav>
+                <hr/>
+            {% endif %}
+        {% endif %}
+
 
         {% if structure.logo %}
             <img class="univer-logo" src="{{ structure.logo.url }}" alt="logo">
