--- a/cloud/templates/moderation.html
+++ b/cloud/templates/moderation.html
@@ -15,8 +15,12 @@
 
     <div class="moderation-container">
         <ul class="nav nav-pills">
-            <li class="active"><a data-toggle="tab" href="#posts">Записи</a></li>
-            <li><a data-toggle="tab" href="#structures">Подразделения</a></li>
+            <li class="active"><a data-toggle="tab" href="#posts">Посты</a></li>
+            <li><a data-toggle="tab" href="#universities">Вузы</a></li>
+            <li><a data-toggle="tab" href="#departments">Факультеты</a></li>
+            <li><a data-toggle="tab" href="#chairs">Кафедры</a></li>
+            <li><a data-toggle="tab" href="#programs">Программы</a></li>
+            <li><a data-toggle="tab" href="#subjects">Предметы</a></li>
         </ul>
 
         <div class="tab-content">
@@ -27,20 +31,40 @@
                 {% endwith %}
             </div>
 
-            <div id="structures" class="tab-pane fade">
+            <div id="universities" class="tab-pane fade">
                 <div class="row" style="margin: 5px">
                     {% for structure in universities %}
                         {% include "cloud/structure.html" %}
                     {% endfor %}
+                </div>
+            </div>
+
+            <div id="departments" class="tab-pane fade">
+                <div class="row" style="margin: 5px">
                     {% for structure in departments %}
                         {% include "cloud/structure.html" %}
                     {% endfor %}
+                </div>
+            </div>
+
+            <div id="chairs" class="tab-pane fade">
+                <div class="row" style="margin: 5px">
                     {% for structure in chairs %}
                         {% include "cloud/structure.html" %}
                     {% endfor %}
+                </div>
+            </div>
+
+            <div id="programs" class="tab-pane fade">
+                <div class="row" style="margin: 5px">
                     {% for structure in programs %}
                         {% include "cloud/structure.html" %}
                     {% endfor %}
+                </div>
+            </div>
+
+            <div id="subjects" class="tab-pane fade">
+                <div class="row" style="margin: 5px">
                     {% for structure in subjects %}
                         {% include "cloud/structure.html" %}
                     {% endfor %}
@@ -48,6 +72,7 @@
             </div>
 
         </div>
+
     </div>
 
 {% endblock %}
