Исправлены битые ссылки

--- a/cloud/templates/structure/program_page.html
+++ b/cloud/templates/structure/program_page.html
@@ -38,7 +38,7 @@
 
                     {% for subject in subjects %}
                         {% if subject.semester == semester %}
-                            <a href="/subject/{{ subject.pk }}"><h4>{{ subject.title }}</h4></a>
+                            <a href="{% url 'subject_page' subject.pk%}"><h4>{{ subject.title }}</h4></a>
                         {% endif %}
                     {% endfor %}
 
