--- a/cloud/templates/structure/university_page.html
+++ b/cloud/templates/structure/university_page.html
@@ -66,7 +66,7 @@
                                                     {% for program in programs %}
                                                         {% if program.chair.pk == chair.pk %}
                                                             <a class="list-group-item"
-                                                               href="/program/{{ program.pk }}">{{ program.title }}</a>
+                                                               href="{% url 'program_page' program.pk %}">{{ program.title }}</a>
                                                         {% endif %}
                                                     {% endfor %}
 
