Возможность создания дочерних постов

--- a/cloud/static/css/post.css
+++ b/cloud/static/css/post.css
@@ -91,3 +91,14 @@ article.post .post-footer-button-edit:hover {
     color: #0000ffa0;
     text-decoration: none;
 }
+
+article.post .post-footer-button-child-post {
+    color: #c390ff;
+    color: rgba(181, 3, 255, 0.19);
+}
+
+article.post .post-footer-button-child-post:hover {
+    color: #ffb1f7;
+    color: rgba(171, 20, 255, 0.63);
+    text-decoration: none;
+}
