--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -26,6 +26,26 @@
                 {% endif %}
                 {% include 'cloud/post.html' %}
             </div>
+
+            {% if child_posts %}
+                <div class="panel panel-primary">
+                    <div class="panel-heading" data-toggle="collapse" href="#child_posts">
+                        Дочерние посты
+                    </div>
+                    <div id="child_posts" class="collapse in">
+                        <div class="panel-body no-margin-padding">
+                            <div class="list-group">
+                                {% for post in child_posts %}
+                                    <div class="post-panel" style="margin: 10px">
+                                        {% include 'cloud/post.html' %}
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+
         </div>
         <div class="col-md-3 col-lg-3"></div>
     </div>
