--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -73,8 +73,8 @@
                 ({{ post.created_date }})
             </span>
             <span class="post-footer-badges">
-                    <a class="post-footer-button-child-post"
-                       title="Дочерняя запись"
+                    <a class="post-footer-button-create-child-post"
+                       title="Создать дочернюю запись"
                        href="{% url 'post_new_child' pk=post.pk %}">
                         <span class="showopacity glyphicon glyphicon-plus"></span>
                     </a>
