Убрать «Облако», оставить «Поиск»

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -63,7 +63,7 @@
             типовики и&nbsp;лабораторые работы&nbsp;—
             всё это есть на&nbsp;<strong>&pi;Cloud</strong>’е.
         </p>
-        <a href="{% url 'post_list' %}" class="button">
+        <a href="{% url 'cloud' %}" class="button">
             Перейти в&nbsp;хранилище
         </a>
     </div>
