--- a/cloud/templates/main_template.html
+++ b/cloud/templates/main_template.html
@@ -62,7 +62,7 @@
                 {% endif %}
 
                 <li>
-                    <a href="{% url 'post_list' %}">
+                    <a href="{% url 'cloud' %}">
                         Облако
                         <span style="font-size:16px;"
                               class="pull-right hidden-xs showopacity glyphicon glyphicon-cloud">
@@ -80,15 +80,6 @@
                         </a>
                     </li>
                 {% endif %}
-
-                <li>
-                    <a href="{% url 'search' %}">
-                        Поиск
-                        <span style="font-size:16px;"
-                              class="pull-right hidden-xs showopacity glyphicon glyphicon-search">
-                        </span>
-                    </a>
-                </li>
 
                 <li>
                     <a href="{% url 'post_new' %}">
