--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -5,6 +5,10 @@
     Вход
 {% endblock %}
 
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/social_buttons.css' %}">
+{% endblock %}
+
 {% block content %}
 
     <form method="post" action="{% url 'signin' %}">
@@ -31,12 +35,14 @@
                     <label><a href="{% url 'password_reset' %}">Восстановить пароль</a></label>
                 </div>
                 <div class="col-xs-6" style="text-align: right; word-wrap: break-word;">
-                    <label><a href="{% url 'signup' %}">Зарегистрироваться</a></label>
+                    <label><a href="{% url 'signup' %}">Регистрация</a></label>
                 </div>
             </div>
 
-            <div class="form-group" style="text-align: right">
-
+            <div class="social vk">
+                <a href="https://oauth.vk.com/authorize?client_id=6477166&display=page&redirect_uri={% if host %}{{ host }}{% else %}picloud.pw{% endif %}{% url 'vk_auth' %}&response_type=code&v=5.74">
+                    <i class="fa fa-vk fa-2x"></i>
+                </a>
             </div>
 
             <div class="form-group">
