Исправить заголовок постов с детьми

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -26,10 +26,11 @@
         {% endif %}
         <header>
             <h1>
-                <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }} </a>
+                <a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a>
                 {% if post.is_parent %}
                     <span style="font-size:12px;"
-                          aria-label="Дочерние посты"
+                          aria-label="Есть дочерние записи"
+                          title="Есть дочерние записи"
                           class="showopacity glyphicon glyphicon-share-alt">
                     </span>
                 {% endif %}
