Сменить иконку родительского поста

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -31,7 +31,7 @@
                     <span style="font-size:12px;"
                           aria-label="Есть дочерние записи"
                           title="Есть дочерние записи"
-                          class="showopacity glyphicon glyphicon-share-alt">
+                          class="showopacity glyphicon glyphicon-th-large">
                     </span>
                 {% endif %}
             </h1>
