Отображать расширение на кнопке «Скачать»

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -62,7 +62,7 @@
         {% endif %}
         {% if post.file %}
             <a href="{{ post.file.url }}" class="btn btn-success">
-                Скачать файл
+                Скачать файл ({{ post.file_extension }})
             </a>
         {% endif %}
         <hr/>
