Отображать человекочитаемую дату создания

--- a/cloud/templates/cloud/post.html
+++ b/cloud/templates/cloud/post.html
@@ -71,7 +71,7 @@
                title="Автор записи"
                href="/user/{{ post.author.pk }}">{{ post.author }}</a>
             <span class="post-created-date" title="Дата и время создания записи">
-                ({{ post.created_date }})
+                ({{ post.created_date_natural }})
             </span>
             <span class="post-footer-badges">
                     <a class="post-footer-button-create-child-post"
