Исправить маржины для дочерних записей

--- a/cloud/templates/cloud/post_detail.html
+++ b/cloud/templates/cloud/post_detail.html
@@ -36,7 +36,7 @@
                         <div class="panel-body no-margin-padding">
                             <div class="list-group">
                                 {% for post in child_posts %}
-                                    <div class="post-panel" style="margin: 10px">
+                                    <div class="post-panel" style="margin: 2rem 1rem">
                                         {% include 'cloud/post.html' %}
                                     </div>
                                 {% endfor %}
