--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -134,7 +134,7 @@
             <div class="col-md-6 col-lg-6">
                 <div class="post-edit-panel">
 
-                    <div id="linkInput" class="form-group django-control row link" style="display: none">
+                    <div id="linkInput" class="form-group django-control link" style="display: none">
                         <label class="col-sm-2 text-right">Ссылка: </label>
                         <div class="col-sm-10">{{ form.link }}</div>
                         <p class="small">
@@ -143,7 +143,7 @@
                         </p>
                     </div>
 
-                    <div id="pictureInput" class="form-group django-control row picture" style="display: none">
+                    <div id="pictureInput" class="form-group django-control picture" style="display: none">
                         <label class="col-sm-2 text-right">Картинка: </label>
                         <div class="col-sm-10">{{ form.image }}</div>
                         <p class="small">
@@ -152,7 +152,7 @@
                         </p>
                     </div>
 
-                    <div id="fileInput" class="form-group django-control row file" style="display: none">
+                    <div id="fileInput" class="form-group django-control file" style="display: none">
                         <label class="col-sm-2 text-right">Файл: </label>
                         <div class="col-sm-10">{{ form.file }}</div>
                         <p class="small">
