--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -182,8 +182,12 @@
                              onclick="displayInputBlock(this, '#fileInput')">
                             <span style="font-size:16px;" class="showopacity glyphicon glyphicon-open-file"></span>
                         </div>
-                        <button type="submit" class="btn btn-default col-xs-12 col-sm-9 col-md-9 col-lg-9">
-                            Сохранить
+                        <button type="submit" class="btn btn-primary col-xs-12 col-sm-9 col-md-9 col-lg-9">
+                            {% if user_info and user_info.status.can_publish_without_moderation %}
+                                Опубликовать
+                            {% else %}
+                                Предложить к публикации
+                            {% endif %}
                         </button>
                     </div>
 
