--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="social vk">
-                <a href="https://oauth.vk.com/authorize?client_id=6477166&display=page&redirect_uri={% if host %}{{ host }}{% else %}picloud.pw{% endif %}{% url 'vk_auth' %}&response_type=code&v=5.74">
+                <a href="https://oauth.vk.com/authorize?client_id=6477166&display=page&redirect_uri=http://{% if host %}{{ host }}{% else %}picloud.pw{% endif %}{% url 'vk_auth' %}&response_type=code&v=5.74">
                     <i class="fa fa-vk fa-2x"></i>
                 </a>
             </div>
