Убрана кнопка аутентификации через ВК

--- a/cloud/templates/auth/signin.html
+++ b/cloud/templates/auth/signin.html
@@ -39,11 +39,15 @@
                 </div>
             </div>
 
+        
+            {% comment %}
+            TODO оставлено до лучших времен
             <div class="social vk">
                 <a href="https://oauth.vk.com/authorize?client_id=6477166&display=page&redirect_uri=http://{% if host %}{{ host }}{% else %}picloud.pw{% endif %}{% url 'vk_auth' %}&response_type=code&v=5.74">
                     <i class="fa fa-vk fa-2x"></i>
                 </a>
             </div>
+            {% endcomment %}
 
             <div class="form-group">
                 <input class="btn btn-default col-xs-12" type="submit" value="Войти"/>
