--- a/cloud/templates/search.html
+++ b/cloud/templates/search.html
@@ -24,12 +24,16 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 search-select">{{ subject.type }}</div>
 
         <hr>
-        <div id="search-line" class="col-xs-12 col-sm-10 col-md-11 col-lg-11">
+        <div id="search-select" class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            {{ sort_type.sort_type }}
+        </div>
+
+        <div id="search-line" class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
             <input class="form-control" type="text"
                    title="Извините, полнотекстовый поиск временно не работает." disabled
                    placeholder="Введите запрос">
         </div>
-        <div id="search-button" class="col-xs-12 col-sm-2 col-md-1 col-lg-1">
+        <div id="search-button" class="col-xs-12 col-sm-12 col-md-1 col-lg-1">
             <input class="form-control btn btn-primary" type="submit"
                    title="Извините, полнотекстовый поиск временно не работает." disabled
                    onclick="search_posts()" value="Поиск">
@@ -75,7 +79,7 @@
 
             {% if request.GET.subject_id %}
                 subject_id = {{ request.GET.subject_id }};
-                setSubject(subject_id)
+                setSubject(subject_id);
             {% endif %}
 
             {% if request.GET.type_id %}
