--- a/cloud/templates/structure/students_from_university.html
+++ b/cloud/templates/structure/students_from_university.html
@@ -16,8 +16,16 @@
 
         {% for student in students_info %}
             <a href="{% url 'user_page' student.user.pk %}" class="university">
-                <img class="university-logo" src="{{ student.avatar.url }}" alt="univer-logo">
-                <h1>{{ student.user.username }}</h1>
+                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                    <div class="avatar-settings"
+                         style="background-image: url({{ student.avatar.url }})">
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7">
+                    <h1>{{ student.user.username }}</h1>
+                    <h4>{{ student.status.title }}</h4>
+                    <h4>Карма - {{ student.karma }}</h4>
+                </div>
             </a>
         {% endfor %}
 
