--- a/cloud/templates/cloud/post_edit.html
+++ b/cloud/templates/cloud/post_edit.html
@@ -111,6 +111,63 @@
         </div>
 
         <div class="row">
+            <div class="col-md-3 col-lg-3"></div>
+            <div class="col-md-6 col-lg-6">
+                <div class="post-edit-panel">
+                    <div class="container-fluid no-margin-padding">
+                        <div id="Header_1" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             onclick="header(1)">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-header"></span>
+                        </div>
+                        <div id="Header_3" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             onclick="header(3)">
+                            <span style="font-size:12px;" class="showopacity glyphicon glyphicon-header"></span>
+                        </div>
+                        <div id="Header_6" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             style="margin-right: 20px" onclick="header(6)">
+                            <span style="font-size:8px;" class="showopacity glyphicon glyphicon-header"></span>
+                        </div>
+
+                        <div id="bold" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             onclick="outline('bold')">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-bold"></span>
+                        </div>
+                        <div id="italic" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             style="margin-right: 20px" onclick="outline('italic')">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-italic"></span>
+                        </div>
+
+                        <div id="code" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             onclick="code_block()">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-barcode"></span>
+                        </div>
+                        <div id="list" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             style="margin-right: 20px" onclick="list_item()">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-th-list"></span>
+                        </div>
+
+                        <div id="link" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             onclick="link_template('link')">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-link"></span>
+                        </div>
+                        <div id="image" class="btn btn-default col-xs-2 col-sm-1 col-md-1 col-lg-1"
+                             style="margin-right: 20px" onclick="link_template('image')">
+                            <span style="font-size:16px;" class="showopacity glyphicon glyphicon-picture"></span>
+                        </div>
+
+
+                        <a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet" target="_blank">
+                            <div id="info" class="btn btn-info col-xs-2 col-sm-1 col-md-1 col-lg-1 pull-right" style="border-radius: 50px">
+                                <span style="font-size:16px;" class="showopacity glyphicon glyphicon-info-sign"></span>
+                            </div>
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
 
             <div class="col-xs-12 col-sm-12 col-md-1 col-lg-1"></div>
             <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
@@ -211,6 +268,7 @@
 {% block js %}
     <script src="{% static 'js/ready.js' %}"></script>
     <script src="{% static 'js/markdown_live_preview.js' %}"></script>
+    <script src="{% static 'js/markdown_editor.js' %}"></script>
     <script src="{% static 'js/department_search.js' %}"></script>
     <script>
         ready(function () {
