Исправить надпись «Официальный сайт»

--- a/cloud/templates/structure/university_page.html
+++ b/cloud/templates/structure/university_page.html
@@ -17,7 +17,7 @@
                     <h3 style="word-wrap: break-word">{{ univer.title }}</h3>
                     <a href="{{ univer.link }}">
                         <span aria-hidden="true" class="glyphicon glyphicon-link"></span>
-                        официальный сайт
+                        Официальный сайт
                     </a>
                 </div>
             </div>
