--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+Sans:400,400i,500,500i,700,700i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya+SC:400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alegreya:400,400i,500,500i,700,700i">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,400i,500,500i,700,700i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
 
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
